CAY-2872 CayenneModeler "Documentation" link is broken
CAY-2873 Change Orderings.orderedList() to accept a Collection rather than a List

Bug Fixes:

CAY-2866 DefaultDataDomainFlushAction breaks on circular relationship update
CAY-2868 Regression: DefaultDbRowOpSorter shouldn't sort update operations
CAY-2871 QualifierTranslator breaks on a relationship with a compound FK

----------------------------------
Release: 4.2.1
Date: Jun 20, 2024
----------------------------------
Changes/New Features:

CAY-2849 Switch documentation to `hugo-asciidoctorj-extension`
CAY-2852 Update velocity-engine-core dependency
CAY-2856 Upgrade Gradle to 8.8
CAY-2857 Java 22 support

Bug Fixes:

CAY-2806 Incorrect processing of unicode escape syntax in JSON
CAY-2809 Cayenne Expression grammar doesn't allow custom function as an argument for string functions
CAY-2810 Can't use custom operator expression with aggregate functions
CAY-2813 Regression: Constants.CI_PROPERTY flag is no longer working for MySQL
CAY-2815 Incorrect translation of aliased expression
CAY-2838 Vertical Inheritance: Problem setting db attribute to null via flattened path
CAY-2840 Vertical Inheritance: Missing subclass attributes with joint prefetch
CAY-2841 Multi column ColumnSelect with SHARED_CACHE fails after 1st select
CAY-2844 Joint prefetch doesn't use ObjEntity qualifier
CAY-2848 Vertical Inheritance: Updating one-to-many with inverse nullifies other columns
CAY-2850 Query using Clob comparison with empty String fails
CAY-2851 Replace Existing OneToOne From New Object
CAY-2853 Incorrect deletion of entities from flattened attributes

----------------------------------
Release: 4.2
Date: May 16, 2023
----------------------------------
Changes/New Features:

CAY-2802 Upgrade Gradle to 7.6.1
CAY-2805 Stop calling exp parser internally

Bug Fixes:

CAY-2552 ColumnQuery with flattened attributes bug
CAY-2783 DbEntity to ObjEntity synchronization should check mandatory flag for primitive java types